# rdesktop-mac

./: .gitignore  BUILD_MAC.md  MacRDPConnectionGUI.h  MacRDPConnectionGUI.m  Makefile.am  Makefile.gnutls.backup  Makefile.in  OPENSSL_MIGRATION_SPEC.md  README.md  asn.c  asn.h  autogen.sh  bitmap.c  bootstrap  build_mac.sh  cache.c  channels.c  cliprdr.c  config.h  config.h.in  config.sub  configure  configure.ac  cssp.c  ctrl.c  disk.c  dvc.c  ewmhints.c  iso.c  libtool  licence.c  loop_rdesktop.sh  lspci.c  mac_gui_main.m  macclip.m  mackeymap.c  macssl.c  macssl.h  macwin.m  macwin.m.bak6  (+50 more)
certs/: rdp_server.crt  rdp_server.der  rdp_server.key
